KVH/mykvh/Email-to-anything/objects/Global_Settings__c.object
<CustomObject>
    <fields>
        <fullName>Auto_Fill_Contact_in_New_emails__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When creating a NEW email from the emails related list, if the parent record has a lookup to a Contact, then auto-populate the &apos;To&apos; field with the Contact. If more than one Contact lookup exists, the first one that has a value will be used</inlineHelpText>
        <label>Auto-Fill Contact in New emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, users will have to select a Business Unit to send email. If not checked, users can send email without selecting any Business Unit.</inlineHelpText>
        <label>Business Unit Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy_Tags_In_Reply_Forward__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Copy Tags In Reply Forward</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EC_Auto_Replied_Status__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Update email status to &apos;Replied&apos; or &apos;Forwarded&apos; when it is replied or forwarded respectively.</inlineHelpText>
        <label>EC Auto Replied Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EC_Compliance_BCC_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The value of this checkbox must be identical to the Compliance BCC Emails Enable checkbox in Email Administration. If not, users may receive errors when attempting to send emails via Ortoo.</inlineHelpText>
        <label>EC Compliance BCC Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EC_Default_Email_Template__c</fullName>
        <inlineHelpText>The default Email Template used by the email editor for new emails.</inlineHelpText>
        <label>EC Default Email Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_Default_Forward_Email_Template__c</fullName>
        <inlineHelpText>The default Email Template used by the email editor for forwarded emails.</inlineHelpText>
        <label>EC Default Forward Email Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_Default_Reply_Email_Template__c</fullName>
        <inlineHelpText>The default Email Template used by the email editor for replied emails.</inlineHelpText>
        <label>EC Default Reply Email Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_Hide_To_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide To Field in Email Client if checked</description>
        <inlineHelpText>If Checked &quot;To&quot; Field will be combined with &quot;Additional To&quot; Field in Email Client</inlineHelpText>
        <label>EC Hide To Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EC_Restrict_From_Addresses__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, organization wide from-addresses available for selection in the email editor will be restricted to the current users address. If unchecked, no restriction applies.</inlineHelpText>
        <label>EC Restrict From Addresses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EC_Store_Sent_Emails_As_Activity__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Store sent (outgoing) emails as Activity in activity related list for target object record.</inlineHelpText>
        <label>EC Store Sent Emails As Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EC_Store_Sent_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Store a copy of sent (outgoing) emails in the email storage object.</inlineHelpText>
        <label>EC Store Sent Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EC_Thread_Id_In_Body__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If checked, thread ID will be automatically added to the email body when available. If not checked, thread ID will not be added.</inlineHelpText>
        <label>EC Thread Id In Body</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EC_Thread_Id_In_Subject__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If checked, thread ID will be automatically added to the email subject when available. If not checked, thread ID will not be added.</inlineHelpText>
        <label>EC Thread Id In Subject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Gateway_API_Key__c</fullName>
        <inlineHelpText>&quot;API Key&quot; from Mailgun Email Gateway settings</inlineHelpText>
        <label>Email Gateway API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Gateway_Domain__c</fullName>
        <inlineHelpText>&quot;Domain&quot; from Mailgun Email Gateway settings</inlineHelpText>
        <label>Email Gateway Domain</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Email_Gateway__c</fullName>
        <inlineHelpText>Email Gateway to use. Default uses Salesforce API. Other options support external email gateways.</inlineHelpText>
        <label>Email Gateway</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Mailgun</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enable_Business_Unit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, business unit selection will be enabled in the email editor. If unchecked, it will be disabled and not visible in the email editor.</inlineHelpText>
        <label>Enable Business Unit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Email_Count__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Email Count</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keep_inline_images_in_email_body__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, inline images are kept in body of the email (and displayed when HTML is rendered) otherwise inline images are treated as normal attachments.</inlineHelpText>
        <label>Keep inline images in email body</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PostV2_Install__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PostV2_Install</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Re_parent_emails_on_Lead_conversion__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Attach Emails To Opportunity, Account, Contact When Lead is Converted</inlineHelpText>
        <label>Re-parent emails on Lead conversion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Set_Business_Unit_from_current_record__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When sending an email from a related
list, default to the Business Unit to that of the current record (e.g. the Lead being send
from) if a lookup to Business Unit exists on the object (e.g. Lead object). This overrides
the User&apos;s Default Business Unit.</inlineHelpText>
        <label>Set Business Unit from current record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uncheck_BCC_checkbox_for_all_Users__c</fullName>
        <label>Uncheck BCC checkbox for all Users</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Use value in User settings</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>e2a Global Settings</label>
    <nameField>
        <label>Global Settings</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>e2a Global Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>